tests/snapshots/vector_test@indexed.snap
---
source: tests/test_roundtrip.rs
description: "VectorTypes { empty_vec: [], single_vec: [\"only one\"], multi_vec: [1, 2, 3, 4, 5], vec_of_structs: [] }"
snapshot_kind: text
---
empty_vec=&
single_vec[0]=only+one&
multi_vec[0]=1&
multi_vec[1]=2&
multi_vec[2]=3&
multi_vec[3]=4&
multi_vec[4]=5&
vec_of_structs=
