tests/snapshots/vector_types@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
empty_vec=&
single_vec%5B0%5D=only%20one&
multi_vec%5B0%5D=1&
multi_vec%5B1%5D=2&
multi_vec%5B2%5D=3&
multi_vec%5B3%5D=4&
multi_vec%5B4%5D=5&
vec_of_structs%5B0%5D%5Ba%5D=1&
vec_of_structs%5B0%5D%5Bb%5D=2&
vec_of_structs%5B1%5D%5Ba%5D=3&
vec_of_structs%5B1%5D%5Bb%5D=4
