tests/snapshots/very_deep_nesting-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
level1[level1][level1][level1][value]=deepest&
level1[level1][level1][value]=level4&
level1[level1][value]=level3&
level1[value]=level2&
value=level1
