tests/snapshots/very_deep_nesting@form.snap
---
source: tests/test_roundtrip.rs
description: "VeryDeep { level1: Some(VeryDeep { level1: Some(VeryDeep { level1: Some(VeryDeep { level1: Some(VeryDeep { level1: None, value: \"deepest\" }), value: \"level4\" }), value: \"level3\" }), value: \"level2\" }), value: \"level1\" }"
---
level1%5Blevel1%5D%5Blevel1%5D%5Blevel1%5D%5Blevel1%5D&
level1%5Blevel1%5D%5Blevel1%5D%5Blevel1%5D%5Bvalue%5D=deepest&
level1%5Blevel1%5D%5Blevel1%5D%5Bvalue%5D=level4&
level1%5Blevel1%5D%5Bvalue%5D=level3&
level1%5Bvalue%5D=level2&
value=level1
